--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 p-[70px] pt-[30px] rounded-md shadow-lg">
-        <h2 class="text-[35px] countdown mb-0">Countdown To</h2>
+        <h2 class=" textshadow text-[35px] countdown mb-0">Countdown To</h2>
         <h1 class="font-semibold newyear text-center mb-[20px] text-[35px] text-black">New Year</h1>
         <div id="countdown" class="grid grid-cols-2 gap-x-5 gap-y-3 md:grid md:grid-cols-4  place-content-center">
             
